# splunk-app-parse-saved-searches

./: README.md  pyproject.toml
security_saved_searches/: README.md  app.manifest
security_saved_searches/default/: app.conf  commands.conf  searchbnf.conf
utils/: bump-app-version.py  package-splunk-app.bash  windows-build.ps1  windows-put-script.ps1
