[tool.poetry]
name = "splunk-app-parse-saved-searches"
version = "0.0.33"
description = ""
authors = ["Adam Hlaváček <git@adamhlavacek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
splunk-packaging-toolkit = {url = "https://download.splunk.com/misc/packaging-toolkit/splunk-packaging-toolkit-1.0.1.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
